# incopilot

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
incopilot/: __main__.py  analyzer.py  cli.py  collectors.py  config.py  config_extended.py  reporter.py
scripts/: demo_generate_sample_logs.py
systemd/: incopilot.service  incopilot.timer
tests/: conftest.py  test_analyzer.py  test_cli.py  test_collectors.py  test_reporter.py
